color-issue resolved in dark mode

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -82,6 +82,7 @@ textarea{
     font-size: 14px;
     padding-left: 10px;
     border: none;
+    border-bottom: 1px solid black;
 }
 
 button{
@@ -97,6 +98,7 @@ button{
     align-items: center;
     border-radius: 10px;
 }
+
 
 @media screen and (max-width: 480px) {
     .c-wrapper{
